reference/5.1/Microsoft.PowerShell.Core/New-ModuleManifest.md
---
external help file: System.Management.Automation.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Core
ms.date: 04/14/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/new-modulemanifest?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: New-ModuleManifest
ms.openlocfilehash: ea0ebc0f742a9d815fbd76ea62e97fd92c4f9da8
ms.sourcegitcommit: 04faa7dc1122bce839295d4891bd8b2f0ecb06ef
ms.translationtype: MT
ms.contentlocale: ko-KR
ms.lasthandoff: 01/05/2021
ms.locfileid: "97879289"
---
# <span data-ttu-id="8764a-103">New-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="8764a-103">New-ModuleManifest</span></span>

## <span data-ttu-id="8764a-104">개요</span><span class="sxs-lookup"><span data-stu-id="8764a-104">SYNOPSIS</span></span>
<span data-ttu-id="8764a-105">새 모듈 매니페스트를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-105">Creates a new module manifest.</span></span>

## <span data-ttu-id="8764a-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="8764a-106">SYNTAX</span></span>

### <span data-ttu-id="8764a-107">모두</span><span class="sxs-lookup"><span data-stu-id="8764a-107">All</span></span>

```
New-ModuleManifest [-Path] <string> [-NestedModules <Object[]>] [-Guid <guid>] [-Author <string>]
 [-CompanyName <string>] [-Copyright <string>] [-RootModule <string>] [-ModuleVersion <version>]
 [-Description <string>] [-ProcessorArchitecture <ProcessorArchitecture>]
 [-PowerShellVersion <version>] [-ClrVersion <version>] [-DotNetFrameworkVersion <version>]
 [-PowerShellHostName <string>] [-PowerShellHostVersion <version>] [-RequiredModules <Object[]>]
 [-TypesToProcess <string[]>] [-FormatsToProcess <string[]>] [-ScriptsToProcess <string[]>]
 [-RequiredAssemblies <string[]>] [-FileList <string[]>] [-ModuleList <Object[]>]
 [-FunctionsToExport <string[]>] [-AliasesToExport <string[]>] [-VariablesToExport <string[]>]
 [-CmdletsToExport <string[]>] [-DscResourcesToExport <string[]>] [-CompatiblePSEditions <string[]>]
 [-PrivateData <Object>] [-Tags <string[]>] [-ProjectUri <uri>] [-LicenseUri <uri>] [-IconUri <uri>]
 [-ReleaseNotes <string>] [-HelpInfoUri <string>] [-PassThru] [-DefaultCommandPrefix <string>]
 [-WhatIf] [-Confirm] [<CommonParameters>]
```

## <span data-ttu-id="8764a-108">설명</span><span class="sxs-lookup"><span data-stu-id="8764a-108">DESCRIPTION</span></span>

<span data-ttu-id="8764a-109">`New-ModuleManifest`Cmdlet은 새 모듈 매니페스트 ( `.psd1` ) 파일을 만들고 해당 값을 채운 다음 지정 된 경로에 매니페스트 파일을 저장 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-109">The `New-ModuleManifest` cmdlet creates a new module manifest (`.psd1`) file, populates its values, and saves the manifest file in the specified path.</span></span>

<span data-ttu-id="8764a-110">모듈 작성자는 이 cmdlet을 사용하여 모듈의 매니페스트를 만들 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-110">Module authors can use this cmdlet to create a manifest for their module.</span></span> <span data-ttu-id="8764a-111">모듈 매니페스트는 `.psd1` 해시 테이블을 포함 하는 파일입니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-111">A module manifest is a `.psd1` file that contains a hash table.</span></span> <span data-ttu-id="8764a-112">해시 테이블의 키와 값은 모듈의 내용 및 특성을 설명하고, 필수 구성 요소를 정의하고, 구성 요소의 처리 방법을 결정합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-112">The keys and values in the hash table describe the contents and attributes of the module, define the prerequisites, and determine how the components are processed.</span></span> <span data-ttu-id="8764a-113">모듈에는 매니페스트가 필요 하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-113">Manifests aren't required for a module.</span></span>

<span data-ttu-id="8764a-114">`New-ModuleManifest` 일반적으로 사용 되는 모든 매니페스트 키를 포함 하는 매니페스트를 만들어 기본 출력을 매니페스트 템플릿으로 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-114">`New-ModuleManifest` creates a manifest that includes all the commonly used manifest keys, so you can use the default output as a manifest template.</span></span> <span data-ttu-id="8764a-115">값을 추가 또는 변경 하거나이 cmdlet이 추가 하지 않는 모듈 키를 추가 하려면 결과 파일을 텍스트 편집기에서 엽니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-115">To add or change values, or to add module keys that this cmdlet doesn't add, open the resulting file in a text editor.</span></span>

<span data-ttu-id="8764a-116">**Path** 및 **PassThru** 를 제외 하 고 각 매개 변수는 모듈 매니페스트 키와 해당 값을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-116">Each parameter, except for **Path** and **PassThru**, creates a module manifest key and its value.</span></span>
<span data-ttu-id="8764a-117">모듈 매니페스트에서는 **ModuleVersion** 키만 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-117">In a module manifest, only the **ModuleVersion** key is required.</span></span> <span data-ttu-id="8764a-118">매개 변수 설명에 지정 된 경우를 제외 하 고, 명령에서 매개 변수를 생략 하면는 영향을 주지 `New-ModuleManifest` 않는 관련 값에 대 한 주석 문자열을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-118">Unless specified in the parameter description, if you omit a parameter from the command, `New-ModuleManifest` creates a comment string for the associated value that has no effect.</span></span>

<span data-ttu-id="8764a-119">PowerShell 2.0에서는 `New-ModuleManifest` 필수 매개 변수 값 외에 명령에 지정 되지 않은 일반적으로 사용 되는 매개 변수의 값을 묻는 메시지를 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-119">In PowerShell 2.0, `New-ModuleManifest` prompts you for the values of commonly used parameters that aren't specified in the command, in addition to required parameter values.</span></span> <span data-ttu-id="8764a-120">PowerShell 3.0부터는 `New-ModuleManifest` 필요한 매개 변수 값이 지정 되지 않은 경우에만 메시지를 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-120">Beginning in PowerShell 3.0, `New-ModuleManifest` prompts only when required parameter values aren't specified.</span></span>

<span data-ttu-id="8764a-121">PowerShell 갤러리에 모듈을 게시 하려는 경우 매니페스트에 특정 속성에 대 한 값이 포함 되어 있어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-121">If you are planning to publish your module in the PowerShell Gallery, the manifest must contain values for certain properties.</span></span> <span data-ttu-id="8764a-122">자세한 내용은 갤러리 설명서의 [PowerShell 갤러리에 게시 된 항목에 대 한 필수 메타 데이터](/powershell/scripting/gallery/how-to/publishing-packages/publishing-a-package#required-metadata-for-items-published-to-the-powershell-gallery) 를 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="8764a-122">For more information, see [Required metadata for items published to the PowerShell Gallery](/powershell/scripting/gallery/how-to/publishing-packages/publishing-a-package#required-metadata-for-items-published-to-the-powershell-gallery) in the Gallery documentation.</span></span>

## <span data-ttu-id="8764a-123">예제</span><span class="sxs-lookup"><span data-stu-id="8764a-123">EXAMPLES</span></span>

### <span data-ttu-id="8764a-124">예제 1-새 모듈 매니페스트 만들기</span><span class="sxs-lookup"><span data-stu-id="8764a-124">Example 1 - Create a new module manifest</span></span>

<span data-ttu-id="8764a-125">이 예제에서는 **Path** 매개 변수로 지정 된 파일에 새 모듈 매니페스트를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-125">This example creates a new module manifest in the file that is specified by the **Path** parameter.</span></span>
<span data-ttu-id="8764a-126">**PassThru** 매개 변수는 출력을 파이프라인과 파일로 보냅니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-126">The **PassThru** parameter sends the output to the pipeline and to the file.</span></span>

<span data-ttu-id="8764a-127">출력은 매니페스트에 있는 모든 키의 기본값을 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-127">The output shows the default values of all keys in the manifest.</span></span>

```powershell
New-ModuleManifest -Path C:\ps-test\Test-Module\Test-Module.psd1 -PassThru
```

```Output
#
# Module manifest for module 'Test-Module'
#
# Generated by: ContosoAdmin
#
# Generated on: 1/22/2019
#

@{

# Script module or binary module file associated with this manifest.
# RootModule = ''

# Version number of this module.
ModuleVersion = '1.0'

# Supported PSEditions
# CompatiblePSEditions = @()

# ID used to uniquely identify this module
GUID = '47179120-0bcb-4f14-8d80-f4560107f85c'

# Author of this module
Author = 'ContosoAdmin'

# Company or vendor of this module
CompanyName = 'Unknown'

# Copyright statement for this module
Copyright = '(c) 2019 ContosoAdmin. All rights reserved.'

# Description of the functionality provided by this module
# Description = ''

# Minimum version of the Windows PowerShell engine required by this module
# PowerShellVersion = ''

# Name of the Windows PowerShell host required by this module
# PowerShellHostName = ''

# Minimum version of the Windows PowerShell host required by this module
# PowerShellHostVersion = ''

# Minimum version of Microsoft .NET Framework required by this module. This prerequisite is valid for the PowerShell Desktop edition only.
# DotNetFrameworkVersion = ''

# Minimum version of the common language runtime (CLR) required by this module. This prerequisite is valid for the PowerShell Desktop edition only.
# CLRVersion = ''

# Processor architecture (None, X86, Amd64) required by this module
# ProcessorArchitecture = ''

# Modules that must be imported into the global environment prior to importing this module
# RequiredModules = @()

# Assemblies that must be loaded prior to importing this module
# RequiredAssemblies = @()

# Script files (.ps1) that are run in the caller's environment prior to importing this module.
# ScriptsToProcess = @()

# Type files (.ps1xml) to be loaded when importing this module
# TypesToProcess = @()

# Format files (.ps1xml) to be loaded when importing this module
# FormatsToProcess = @()

# Modules to import as nested modules of the module specified in RootModule/ModuleToProcess
# NestedModules = @()

# Functions to export from this module, for best performance, do not use wildcards and do not delete the entry, use an empty array if there are no functions to export.
FunctionsToExport = @()

# Cmdlets to export from this module, for best performance, do not use wildcards and do not delete the entry, use an empty array if there are no cmdlets to export.
CmdletsToExport = @()

# Variables to export from this module
VariablesToExport = '*'

# Aliases to export from this module, for best performance, do not use wildcards and do not delete the entry, use an empty array if there are no aliases to export.
AliasesToExport = @()

# DSC resources to export from this module
# DscResourcesToExport = @()

# List of all modules packaged with this module
# ModuleList = @()

# List of all files packaged with this module
# FileList = @()

# Private data to pass to the module specified in RootModule/ModuleToProcess. This may also contain a PSData hashtable with additional module metadata used by PowerShell.
PrivateData = @{

    PSData = @{

        # Tags applied to this module. These help with module discovery in online galleries.
        # Tags = @()

        # A URL to the license for this module.
        # LicenseUri = ''

        # A URL to the main website for this project.
        # ProjectUri = ''

        # A URL to an icon representing this module.
        # IconUri = ''

        # ReleaseNotes of this module
        # ReleaseNotes = ''

    } # End of PSData hashtable

} # End of PrivateData hashtable

# HelpInfo URI of this module
# HelpInfoURI = ''

# Default prefix for commands exported from this module. Override the default prefix using Import-Module -Prefix.
# DefaultCommandPrefix = ''

}
```

### <span data-ttu-id="8764a-128">예제 2-미리 채워진 설정을 사용 하 여 새 매니페스트 만들기</span><span class="sxs-lookup"><span data-stu-id="8764a-128">Example 2 - Create a new manifest with some prepopulated settings</span></span>

<span data-ttu-id="8764a-129">이 예제에서는 새 모듈 매니페스트를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-129">This example creates a new module manifest.</span></span> <span data-ttu-id="8764a-130">**PowerShellVersion** 및 **AliasesToExport** 매개 변수를 사용하여 해당 매니페스트 키에 값을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-130">It uses the **PowerShellVersion** and **AliasesToExport** parameters to add values to the corresponding manifest keys.</span></span>

```powershell
New-ModuleManifest -PowerShellVersion 1.0 -AliasesToExport JKBC, DRC, TAC -Path C:\ps-test\ManifestTest.psd1
```

### <span data-ttu-id="8764a-131">예제 3-다른 모듈이 필요한 매니페스트 만들기</span><span class="sxs-lookup"><span data-stu-id="8764a-131">Example 3 - Create a manifest that requires other modules</span></span>

<span data-ttu-id="8764a-132">이 예에서는 문자열 형식을 사용 하 여 **BitsTransfer** 모듈의 이름을 지정 하 고 해시 테이블 형식을 사용 하 여 이름, **GUID** 및 **PSScheduledJob** 모듈의 버전을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-132">This example uses a string format to specify the name of the **BitsTransfer** module and the hash table format to specify the name, a **GUID**, and a version of the **PSScheduledJob** module.</span></span>

```powershell
$moduleSettings = @{
  RequiredModules = ("BitsTransfer", @{
    ModuleName="PSScheduledJob"
    ModuleVersion="1.0.0.0";
    GUID="50cdb55f-5ab7-489f-9e94-4ec21ff51e59"
  })
  Path = 'C:\ps-test\ManifestTest.psd1'
}
New-ModuleManifest @moduleSettings
```

<span data-ttu-id="8764a-133">이 예에서는 **Modulelist**, **RequiredModules** 및 **NestedModules** 매개 변수의 문자열 및 해시 테이블 형식을 사용 하는 방법을 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-133">This example shows how to use the string and hash table formats of the **ModuleList**, **RequiredModules**, and **NestedModules** parameter.</span></span> <span data-ttu-id="8764a-134">동일한 매개 변수 값에서 문자열과 해시 테이블을 결합할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-134">You can combine strings and hash tables in the same parameter value.</span></span>

### <span data-ttu-id="8764a-135">예제 4-업데이트할 수 있는 도움말을 지 원하는 매니페스트 만들기</span><span class="sxs-lookup"><span data-stu-id="8764a-135">Example 4 - Create a manifest that supports updateable help</span></span>

<span data-ttu-id="8764a-136">이 예제에서는 **HelpInfoUri** 매개 변수를 사용 하 여 모듈 매니페스트에 **HelpInfoUri** 키를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-136">This example uses the **HelpInfoUri** parameter to create a **HelpInfoUri** key in the module manifest.</span></span> <span data-ttu-id="8764a-137">매개 변수 및 키의 값은 **http** 또는 **https** 로 시작 해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-137">The value of the parameter and the key must begin with **http** or **https**.</span></span> <span data-ttu-id="8764a-138">이 값은 업데이트할 수 있는 도움말 시스템에 모듈에 대한 HelpInfo XML 업데이트할 수 있는 도움말 정보 파일이 있는 위치를 알려줍니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-138">This value tells the Updatable Help system where to find the HelpInfo XML updatable help information file for the module.</span></span>

```powershell
$moduleSettings = @{
  HelpInfoUri = 'http://https://go.microsoft.com/fwlink/?LinkID=603'
  Path = 'C:\ps-test\ManifestTest.psd1'
}
New-ModuleManifest @moduleSettings
```

<span data-ttu-id="8764a-139">업데이트할 수 있는 도움말에 대 한 자세한 내용은 [about_Updatable_Help](./About/about_Updatable_Help.md)를 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="8764a-139">For information about Updatable Help, see [about_Updatable_Help](./About/about_Updatable_Help.md).</span></span>
<span data-ttu-id="8764a-140">HelpInfo XML 파일에 대 한 자세한 내용은 업데이트할 수 있는 [도움말 지원](/powershell/scripting/developer/module/supporting-updatable-help)을 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="8764a-140">For information about the HelpInfo XML file, see [Supporting Updatable Help](/powershell/scripting/developer/module/supporting-updatable-help).</span></span>

### <span data-ttu-id="8764a-141">예 5-모듈 정보 가져오기</span><span class="sxs-lookup"><span data-stu-id="8764a-141">Example 5 - Getting module information</span></span>

<span data-ttu-id="8764a-142">이 예제에서는 모듈의 구성 값을 가져오는 방법을 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-142">This example shows how to get the configuration values of a module.</span></span> <span data-ttu-id="8764a-143">모듈 매니페스트의 값은 module 개체의 속성 값에 반영 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-143">The values in the module manifest are reflected in the values of properties of the module object.</span></span>

<span data-ttu-id="8764a-144">`Get-Module`Cmdlet은 **List** 매개 변수를 사용 하 여 **Microsoft. PowerShell 진단** 모듈을 가져오는 데 사용 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-144">The `Get-Module` cmdlet is used to get the **Microsoft.PowerShell.Diagnostics** module using the **List** parameter.</span></span> <span data-ttu-id="8764a-145">이 명령은 모듈을 cmdlet에 전송 `Format-List` 하 여 모듈 개체의 모든 속성과 값을 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-145">The command sends the module to the `Format-List` cmdlet to display all properties and values of the module object.</span></span>

```powershell
Get-Module Microsoft.PowerShell.Diagnostics -List | Format-List -Property *
```

```Output
LogPipelineExecutionDetails : False
Name                        : Microsoft.PowerShell.Diagnostics
Path                        : C:\Windows\system32\WindowsPowerShell\v1.0\Modules\Microsoft.PowerShell.Diagnostics\Micro
                              soft.PowerShell.Diagnostics.psd1
Definition                  :
Description                 :
Guid                        : ca046f10-ca64-4740-8ff9-2565dba61a4f
HelpInfoUri                 : https://go.microsoft.com/fwlink/?LinkID=210596
ModuleBase                  : C:\Windows\system32\WindowsPowerShell\v1.0\Modules\Microsoft.PowerShell.Diagnostics
PrivateData                 :
Version                     : 3.0.0.0
ModuleType                  : Manifest
Author                      : Microsoft Corporation
AccessMode                  : ReadWrite
ClrVersion                  : 4.0
CompanyName                 : Microsoft Corporation
Copyright                   : Microsoft Corporation. All rights reserved.
DotNetFrameworkVersion      :
ExportedFunctions           : {}
ExportedCmdlets             : {[Get-WinEvent, Get-WinEvent], [Get-Counter, Get-Counter], [Import-Counter,
                              Import-Counter], [Export-Counter, Export-Counter]...}
ExportedCommands            : {[Get-WinEvent, Get-WinEvent], [Get-Counter, Get-Counter], [Import-Counter,
                              Import-Counter], [Export-Counter, Export-Counter]...}
FileList                    : {}
ModuleList                  : {}
NestedModules               : {}
PowerShellHostName          :
PowerShellHostVersion       :
PowerShellVersion           : 3.0
ProcessorArchitecture       : None
Scripts                     : {}
RequiredAssemblies          : {}
RequiredModules             : {}
RootModule                  :
ExportedVariables           : {}
ExportedAliases             : {}
ExportedWorkflows           : {}
SessionState                :
OnRemove                    :
ExportedFormatFiles         : {C:\Windows\system32\WindowsPowerShell\v1.0\Event.format.ps1xml,
                              C:\Windows\system32\WindowsPowerShell\v1.0\Diagnostics.format.ps1xml}
ExportedTypeFiles           : {C:\Windows\system32\WindowsPowerShell\v1.0\GetEvent.types.ps1xml}
```

## <span data-ttu-id="8764a-146">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="8764a-146">PARAMETERS</span></span>

### <span data-ttu-id="8764a-147">-AliasesToExport</span><span class="sxs-lookup"><span data-stu-id="8764a-147">-AliasesToExport</span></span>

<span data-ttu-id="8764a-148">모듈이 내보내는 별칭을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-148">Specifies the aliases that the module exports.</span></span> <span data-ttu-id="8764a-149">와일드카드가 지원됩니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-149">Wildcards are permitted.</span></span>

<span data-ttu-id="8764a-150">이 매개 변수를 사용하여 모듈이 내보내는 별칭을 제한할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-150">You can use this parameter to restrict the aliases that are exported by the module.</span></span> <span data-ttu-id="8764a-151">내보낸 별칭 목록에서 별칭을 제거할 수 있지만 목록에 별칭을 추가할 수는 없습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-151">It can remove aliases from the list of exported aliases, but it can't add aliases to the list.</span></span>

<span data-ttu-id="8764a-152">이 매개 변수를 생략 하면는 `New-ModuleManifest` (all) 값을 사용 하 여 **AliasesToExport** 키를 만듭니다 `*` . 즉, 모듈에 정의 된 모든 별칭을 매니페스트에서 내보냅니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-152">If you omit this parameter, `New-ModuleManifest` creates an **AliasesToExport** key with a value of `*` (all), meaning that all aliases defined in the module are exported by the manifest.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: * (all)
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="8764a-153">-작성자</span><span class="sxs-lookup"><span data-stu-id="8764a-153">-Author</span></span>

<span data-ttu-id="8764a-154">모듈 작성자를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-154">Specifies the module author.</span></span>

<span data-ttu-id="8764a-155">이 매개 변수를 생략 하면에서 `New-ModuleManifest` 현재 사용자의 이름으로 **Author** 키를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-155">If you omit this parameter, `New-ModuleManifest` creates an **Author** key with the name of the current user.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: Name of the current user
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-156">-ClrVersion</span><span class="sxs-lookup"><span data-stu-id="8764a-156">-ClrVersion</span></span>

<span data-ttu-id="8764a-157">모듈에 필요한 Microsoft .NET Framework의 CLR(공용 언어 런타임) 최소 버전을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-157">Specifies the minimum version of the Common Language Runtime (CLR) of the Microsoft .NET Framework that the module requires.</span></span>

```yaml
Type: System.Version
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-158">-CmdletsToExport</span><span class="sxs-lookup"><span data-stu-id="8764a-158">-CmdletsToExport</span></span>

<span data-ttu-id="8764a-159">모듈이 내보내는 cmdlet을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-159">Specifies the cmdlets that the module exports.</span></span> <span data-ttu-id="8764a-160">와일드카드가 지원됩니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-160">Wildcards are permitted.</span></span>

<span data-ttu-id="8764a-161">이 매개 변수를 사용하여 모듈이 내보내는 cmdlet을 제한할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-161">You can use this parameter to restrict the cmdlets that are exported by the module.</span></span> <span data-ttu-id="8764a-162">이 cmdlet은 내보낸 cmdlet 목록에서 cmdlet을 제거할 수 있지만 목록에 cmdlet을 추가할 수는 없습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-162">It can remove cmdlets from the list of exported cmdlets, but it can't add cmdlets to the list.</span></span>

<span data-ttu-id="8764a-163">이 매개 변수를 생략 하면는 `New-ModuleManifest` (all) 값을 사용 하 여 **Cmdletstoexport** 키를 만듭니다 `*` . 즉, 모듈에 정의 된 모든 cmdlet을 매니페스트에서 내보냅니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-163">If you omit this parameter, `New-ModuleManifest` creates a **CmdletsToExport** key with a value of `*` (all), meaning that all cmdlets defined in the module are exported by the manifest.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: * (all)
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="8764a-164">-CompanyName</span><span class="sxs-lookup"><span data-stu-id="8764a-164">-CompanyName</span></span>

<span data-ttu-id="8764a-165">모듈을 만든 회사나 공급업체를 식별합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-165">Identifies the company or vendor who created the module.</span></span>

<span data-ttu-id="8764a-166">이 매개 변수를 생략 하면는 `New-ModuleManifest` "Unknown" 값을 사용 하 여 **CompanyName** 키를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-166">If you omit this parameter, `New-ModuleManifest` creates a **CompanyName** key with a value of "Unknown".</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: "Unknown"
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-167">-Confirm</span><span class="sxs-lookup"><span data-stu-id="8764a-167">-Confirm</span></span>

<span data-ttu-id="8764a-168">cmdlet을 실행하기 전에 확인을 요청합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-168">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-169">-CompatiblePSEditions</span><span class="sxs-lookup"><span data-stu-id="8764a-169">-CompatiblePSEditions</span></span>

<span data-ttu-id="8764a-170">모듈의 호환 되는 Pseditions가를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-170">Specifies the module's compatible PSEditions.</span></span> <span data-ttu-id="8764a-171">PSEdition에 대 한 자세한 내용은 [호환 되는 PowerShell 버전이 있는 모듈](/powershell/scripting/gallery/concepts/module-psedition-support)을 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="8764a-171">For information about PSEdition, see [Modules with compatible PowerShell Editions](/powershell/scripting/gallery/concepts/module-psedition-support).</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:
Accepted values: Desktop, Core

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-172">-저작권</span><span class="sxs-lookup"><span data-stu-id="8764a-172">-Copyright</span></span>

<span data-ttu-id="8764a-173">모듈의 저작권 정보를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-173">Specifies a copyright statement for the module.</span></span>

<span data-ttu-id="8764a-174">이 매개 변수를 생략 하면 `New-ModuleManifest` 는 값을 갖는 **저작권** 키를 만듭니다 `(c) <year> <username>. All rights reserved.` `<year>` . 여기서는 현재 연도이 고 `<username>` 은 **Author** 키의 값입니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-174">If you omit this parameter, `New-ModuleManifest` creates a **Copyright** key with a value of `(c) <year> <username>. All rights reserved.` where `<year>` is the current year and `<username>` is the value of the **Author** key.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: (c) <year> <username>. All rights reserved.
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-175">-Description</span><span class="sxs-lookup"><span data-stu-id="8764a-175">-Description</span></span>

<span data-ttu-id="8764a-176">모듈의 내용을 설명합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-176">Describes the contents of the module.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-177">-DotNetFrameworkVersion</span><span class="sxs-lookup"><span data-stu-id="8764a-177">-DotNetFrameworkVersion</span></span>

<span data-ttu-id="8764a-178">모듈에 필요한 Microsoft .NET Framework의 최소 버전을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-178">Specifies the minimum version of the Microsoft .NET Framework that the module requires.</span></span>

```yaml
Type: System.Version
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-179">-DscResourcesToExport</span><span class="sxs-lookup"><span data-stu-id="8764a-179">-DscResourcesToExport</span></span>

<span data-ttu-id="8764a-180">모듈에서 내보내는 DSC (Desired State Configuration) 리소스를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-180">Specifies the Desired State Configuration (DSC) resources that the module exports.</span></span> <span data-ttu-id="8764a-181">와일드카드가 지원됩니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-181">Wildcards are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="8764a-182">-FileList</span><span class="sxs-lookup"><span data-stu-id="8764a-182">-FileList</span></span>

<span data-ttu-id="8764a-183">모듈에 포함된 모든 항목을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-183">Specifies all items that are included in the module.</span></span>

<span data-ttu-id="8764a-184">이 키는 모듈 인벤토리 역할을 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-184">This key is designed to act as a module inventory.</span></span> <span data-ttu-id="8764a-185">키에 나열 된 파일은 모듈이 게시 될 때 포함 되지만 모든 기능을 자동으로 내보내지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-185">The files listed in the key are included when the module is published, but any functions aren't automatically exported.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-186">-FormatsToProcess</span><span class="sxs-lookup"><span data-stu-id="8764a-186">-FormatsToProcess</span></span>

<span data-ttu-id="8764a-187">`.ps1xml`모듈을 가져올 때 실행 되는 서식 파일 ()을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-187">Specifies the formatting files (`.ps1xml`) that run when the module is imported.</span></span>

<span data-ttu-id="8764a-188">모듈을 가져올 때 PowerShell에서 지정 된 파일을 사용 하 여 cmdlet을 실행 합니다 `Update-FormatData` .</span><span class="sxs-lookup"><span data-stu-id="8764a-188">When you import a module, PowerShell runs the `Update-FormatData` cmdlet with the specified files.</span></span>
<span data-ttu-id="8764a-189">형식 지정 파일의 범위는 지정 되지 않기 때문에 세션의 모든 세션 상태에 영향을 줍니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-189">Because formatting files aren't scoped, they affect all session states in the session.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-190">-FunctionsToExport</span><span class="sxs-lookup"><span data-stu-id="8764a-190">-FunctionsToExport</span></span>

<span data-ttu-id="8764a-191">모듈이 내보내는 함수를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-191">Specifies the functions that the module exports.</span></span> <span data-ttu-id="8764a-192">와일드카드가 지원됩니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-192">Wildcards are permitted.</span></span>

<span data-ttu-id="8764a-193">이 매개 변수를 사용하여 모듈이 내보내는 함수를 제한할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-193">You can use this parameter to restrict the functions that are exported by the module.</span></span> <span data-ttu-id="8764a-194">내보낸 별칭 목록에서 함수를 제거할 수 있지만 목록에 함수를 추가할 수는 없습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-194">It can remove functions from the list of exported aliases, but it can't add functions to the list.</span></span>

<span data-ttu-id="8764a-195">이 매개 변수를 생략 하면는 `New-ModuleManifest` (all) 값을 사용 하 여 **Functionstoexport** 키를 만듭니다 `*` . 즉, 모듈에 정의 된 모든 함수를 매니페스트에서 내보냅니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-195">If you omit this parameter, `New-ModuleManifest` creates an **FunctionsToExport** key with a value of `*` (all), meaning that all functions defined in the module are exported by the manifest.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: * (all)
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="8764a-196">-Guid</span><span class="sxs-lookup"><span data-stu-id="8764a-196">-Guid</span></span>

<span data-ttu-id="8764a-197">모듈의 고유 식별자를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-197">Specifies a unique identifier for the module.</span></span> <span data-ttu-id="8764a-198">**GUID** 를 사용 하 여 이름이 같은 모듈을 구분할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-198">The **GUID** can be used to distinguish among modules with the same name.</span></span>

<span data-ttu-id="8764a-199">이 매개 변수를 생략 하면에서 `New-ModuleManifest` 매니페스트에 **guid** 키를 만들고 값에 대 한 **guid** 를 생성 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-199">If you omit this parameter, `New-ModuleManifest` creates a **GUID** key in the manifest and generates a **GUID** for the value.</span></span>

<span data-ttu-id="8764a-200">PowerShell에서 새 **GUID** 를 만들려면를 입력 `[guid]::NewGuid()` 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-200">To create a new **GUID** in PowerShell, type `[guid]::NewGuid()`.</span></span>

```yaml
Type: System.Guid
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: A GUID generated for the module
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-201">-HelpInfoUri</span><span class="sxs-lookup"><span data-stu-id="8764a-201">-HelpInfoUri</span></span>

<span data-ttu-id="8764a-202">모듈에 대 한 HelpInfo XML 파일의 인터넷 주소를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-202">Specifies the internet address of the HelpInfo XML file for the module.</span></span> <span data-ttu-id="8764a-203">**Http** 또는 **https** 로 시작 하는 URI (Uniform resource Identifier)를 입력 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-203">Enter a Uniform Resource Identifier (URI) that begins with **http** or **https**.</span></span>

<span data-ttu-id="8764a-204">HelpInfo XML 파일은 PowerShell 3.0에 도입 된 업데이트할 수 있는 도움말 기능을 지원 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-204">The HelpInfo XML file supports the Updatable Help feature that was introduced in PowerShell 3.0.</span></span> <span data-ttu-id="8764a-205">이 파일에는 모듈에 대한 다운로드 가능한 도움말 파일의 위치 및 지원되는 각 로캘에 대한 최신 도움말 파일의 버전 번호 정보가 포함되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-205">It contains information about the location of downloadable help files for the module and the version numbers of the newest help files for each supported locale.</span></span>

<span data-ttu-id="8764a-206">업데이트할 수 있는 도움말에 대 한 자세한 내용은 [about_Updatable_Help](./About/about_Updatable_Help.md)를 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="8764a-206">For information about Updatable Help, see [about_Updatable_Help](./About/about_Updatable_Help.md).</span></span>
<span data-ttu-id="8764a-207">HelpInfo XML 파일에 대 한 자세한 내용은 업데이트할 수 있는 [도움말 지원](/powershell/scripting/developer/module/supporting-updatable-help)을 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="8764a-207">For information about the HelpInfo XML file, see [Supporting Updatable Help](/powershell/scripting/developer/module/supporting-updatable-help).</span></span>

<span data-ttu-id="8764a-208">이 매개 변수는 PowerShell 3.0에서 도입 되었습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-208">This parameter was introduced in PowerShell 3.0.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-209">-IconUri</span><span class="sxs-lookup"><span data-stu-id="8764a-209">-IconUri</span></span>

<span data-ttu-id="8764a-210">모듈에 대 한 아이콘의 URL을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-210">Specifies the URL of an icon for the module.</span></span> <span data-ttu-id="8764a-211">지정 된 아이콘은 모듈에 대 한 갤러리 웹 페이지에 표시 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-211">The specified icon is displayed on the gallery web page for the module.</span></span>

```yaml
Type: System.Uri
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-212">-LicenseUri</span><span class="sxs-lookup"><span data-stu-id="8764a-212">-LicenseUri</span></span>

<span data-ttu-id="8764a-213">모듈에 대 한 라이선스 조건의 URL을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-213">Specifies the URL of licensing terms for the module.</span></span>

```yaml
Type: System.Uri
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-214">-ModuleList</span><span class="sxs-lookup"><span data-stu-id="8764a-214">-ModuleList</span></span>

<span data-ttu-id="8764a-215">이 모듈에 포함된 모든 모듈을 나열합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-215">Lists all modules that are included in this module.</span></span>

<span data-ttu-id="8764a-216">각 모듈 이름을 문자열이나 **ModuleName** 및 **ModuleVersion** 키가 포함된 해시 테이블로 입력합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-216">Enter each module name as a string or as a hash table with **ModuleName** and **ModuleVersion** keys.</span></span> <span data-ttu-id="8764a-217">해시 테이블에 선택적 **GUID** 키가 포함될 수도 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-217">The hash table can also have an optional **GUID** key.</span></span> <span data-ttu-id="8764a-218">매개 변수 값에서 문자열과 해시 테이블을 결합할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-218">You can combine strings and hash tables in the parameter value.</span></span>

<span data-ttu-id="8764a-219">이 키는 모듈 인벤토리 역할을 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-219">This key is designed to act as a module inventory.</span></span> <span data-ttu-id="8764a-220">이 키의 값에 나열 된 모듈은 자동으로 처리 되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-220">The modules that are listed in the value of this key aren't automatically processed.</span></span>

```yaml
Type: System.Object[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-221">-ModuleVersion</span><span class="sxs-lookup"><span data-stu-id="8764a-221">-ModuleVersion</span></span>

<span data-ttu-id="8764a-222">모듈의 버전을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-222">Specifies the module's version.</span></span>

<span data-ttu-id="8764a-223">이 매개 변수는 필수는 아니지만 매니페스트에 **ModuleVersion** 키가 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-223">This parameter isn't required, but a **ModuleVersion** key is required in the manifest.</span></span> <span data-ttu-id="8764a-224">이 매개 변수를 생략 하면에서 `New-ModuleManifest` 1.0 값을 사용 하 여 **ModuleVersion** 키를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-224">If you omit this parameter, `New-ModuleManifest` creates a **ModuleVersion** key with a value of 1.0.</span></span>

```yaml
Type: System.Version
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: 1.0
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-225">-NestedModules</span><span class="sxs-lookup"><span data-stu-id="8764a-225">-NestedModules</span></span>

<span data-ttu-id="8764a-226">`.psm1` `.dll` 모듈의 세션 상태로 가져올 스크립트 모듈 () 및 이진 모듈 ()을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-226">Specifies script modules (`.psm1`) and binary modules (`.dll`) that are imported into the module's session state.</span></span> <span data-ttu-id="8764a-227">**NestedModules** 키의 파일은 값에 나열 된 순서 대로 실행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-227">The files in the **NestedModules** key run in the order in which they're listed in the value.</span></span>

<span data-ttu-id="8764a-228">각 모듈 이름을 문자열이나 **ModuleName** 및 **ModuleVersion** 키가 포함된 해시 테이블로 입력합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-228">Enter each module name as a string or as a hash table with **ModuleName** and **ModuleVersion** keys.</span></span> <span data-ttu-id="8764a-229">해시 테이블에 선택적 **GUID** 키가 포함될 수도 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-229">The hash table can also have an optional **GUID** key.</span></span> <span data-ttu-id="8764a-230">매개 변수 값에서 문자열과 해시 테이블을 결합할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-230">You can combine strings and hash tables in the parameter value.</span></span>

<span data-ttu-id="8764a-231">일반적으로 중첩 모듈에는 내부 처리를 위해 루트 모듈에 필요한 명령이 들어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-231">Typically, nested modules contain commands that the root module needs for its internal processing.</span></span>
<span data-ttu-id="8764a-232">기본적으로 중첩 모듈의 명령은 모듈의 세션 상태에서 호출자의 세션 상태로 내보내지고 루트 모듈은 내보내는 명령을 제한할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-232">By default, the commands in nested modules are exported from the module's session state into the caller's session state, but the root module can restrict the commands that it exports.</span></span> <span data-ttu-id="8764a-233">예를 들어 `Export-ModuleMember` 명령을 사용 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-233">For example, by using an `Export-ModuleMember` command.</span></span>

<span data-ttu-id="8764a-234">모듈 세션 상태의 중첩 모듈은 루트 모듈에서 사용할 수 있지만 `Get-Module` 호출자 세션 상태의 명령에 의해 반환 되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-234">Nested modules in the module session state are available to the root module, but they aren't returned by a `Get-Module` command in the caller's session state.</span></span>

<span data-ttu-id="8764a-235">`.ps1` **NestedModules** 키에 나열 된 스크립트 ()는 호출자의 세션 상태가 아닌 모듈의 세션 상태에서 실행 됩니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-235">Scripts (`.ps1`) that are listed in the **NestedModules** key are run in the module's session state, not in the caller's session state.</span></span> <span data-ttu-id="8764a-236">호출자의 세션 상태에서 스크립트를 실행하려면 매니페스트의 **ScriptsToProcess** 키 값에 스크립트 파일 이름을 나열합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-236">To run a script in the caller's session state, list the script file name in the value of the **ScriptsToProcess** key in the manifest.</span></span>

```yaml
Type: System.Object[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-237">-PassThru</span><span class="sxs-lookup"><span data-stu-id="8764a-237">-PassThru</span></span>

<span data-ttu-id="8764a-238">결과 모듈 매니페스트를 콘솔에 기록 하 고 파일을 만듭니다 `.psd1` .</span><span class="sxs-lookup"><span data-stu-id="8764a-238">Writes the resulting module manifest to the console and creates a `.psd1` file.</span></span> <span data-ttu-id="8764a-239">기본적으로이 cmdlet은 출력을 생성 하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-239">By default, this cmdlet doesn't generate any output.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-240">-Path</span><span class="sxs-lookup"><span data-stu-id="8764a-240">-Path</span></span>

<span data-ttu-id="8764a-241">새 모듈 매니페스트의 경로와 파일 이름을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-241">Specifies the path and file name of the new module manifest.</span></span> <span data-ttu-id="8764a-242">파일 이름 확장명을 사용 하는 경로 및 파일 이름 (예:)을 입력 `.psd1` `$pshome\Modules\MyModule\MyModule.psd1` 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-242">Enter a path and file name with a `.psd1` file name extension, such as `$pshome\Modules\MyModule\MyModule.psd1`.</span></span> <span data-ttu-id="8764a-243">**Path** 매개 변수는 필수입니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-243">The **Path** parameter is required.</span></span>

<span data-ttu-id="8764a-244">기존 파일에 대 한 경로를 지정 하는 경우 `New-ModuleManifest` 파일에 읽기 전용 특성이 없는 경우는 경고 없이 파일을 바꿉니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-244">If you specify the path to an existing file, `New-ModuleManifest` replaces the file without warning unless the file has the read-only attribute.</span></span>

<span data-ttu-id="8764a-245">매니페스트는 모듈 디렉터리에 있어야 하며 매니페스트 파일 이름은 모듈 디렉터리 이름과 동일 해야 하지만 파일 이름 확장명을 사용 해야 합니다 `.psd1` .</span><span class="sxs-lookup"><span data-stu-id="8764a-245">The manifest should be located in the module's directory, and the manifest file name should be the same as the module directory name, but with a `.psd1` file name extension.</span></span>

> [!NOTE]
> <span data-ttu-id="8764a-246">`$PSHOME` `$HOME` **경로** 매개 변수 값에 대 한 프롬프트에 응답 하 여 또는와 같은 변수를 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-246">You cannot use variables, such as `$PSHOME` or `$HOME`, in response to a prompt for a **Path** parameter value.</span></span> <span data-ttu-id="8764a-247">변수를 사용하려면 명령에 **Path** 매개 변수를 포함합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-247">To use a variable, include the **Path** parameter in the command.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-248">-PowerShellHostName</span><span class="sxs-lookup"><span data-stu-id="8764a-248">-PowerShellHostName</span></span>

<span data-ttu-id="8764a-249">모듈에 필요한 PowerShell 호스트 프로그램의 이름을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-249">Specifies the name of the PowerShell host program that the module requires.</span></span> <span data-ttu-id="8764a-250">호스트 프로그램의 이름 (예: **Windows PowerShell ISE host** 또는 **ConsoleHost**)을 입력 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-250">Enter the name of the host program, such as **Windows PowerShell ISE Host** or **ConsoleHost**.</span></span> <span data-ttu-id="8764a-251">와일드 카드는 허용 되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-251">Wildcards aren't permitted.</span></span>

<span data-ttu-id="8764a-252">호스트 프로그램의 이름을 찾으려면 프로그램에서을 입력 `$Host.Name` 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-252">To find the name of a host program, in the program, type `$Host.Name`.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-253">-PowerShellHostVersion</span><span class="sxs-lookup"><span data-stu-id="8764a-253">-PowerShellHostVersion</span></span>

<span data-ttu-id="8764a-254">모듈에서 작동 하는 PowerShell 호스트 프로그램의 최소 버전을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-254">Specifies the minimum version of the PowerShell host program that works with the module.</span></span> <span data-ttu-id="8764a-255">버전 번호를 입력하세요(예: 1.1).</span><span class="sxs-lookup"><span data-stu-id="8764a-255">Enter a version number, such as 1.1.</span></span>

```yaml
Type: System.Version
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-256">-PowerShellVersion</span><span class="sxs-lookup"><span data-stu-id="8764a-256">-PowerShellVersion</span></span>

<span data-ttu-id="8764a-257">이 모듈에서 작동 하는 PowerShell의 최소 버전을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-257">Specifies the minimum version of PowerShell that works with this module.</span></span> <span data-ttu-id="8764a-258">예를 들어 매개 변수의 값으로 1.0, 2.0 또는 3.0을 입력할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-258">For example, you can enter 1.0, 2.0, or 3.0 as the parameter's value.</span></span> <span data-ttu-id="8764a-259">이 파일은 X. X 형식 이어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-259">It must be in an X.X format.</span></span> <span data-ttu-id="8764a-260">예를 들어 제출 하는 경우 `5` PowerShell에서 오류를 throw 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-260">For example, if you submit `5`, PowerShell will throw an error.</span></span>

```yaml
Type: System.Version
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-261">-PrivateData</span><span class="sxs-lookup"><span data-stu-id="8764a-261">-PrivateData</span></span>

<span data-ttu-id="8764a-262">모듈을 가져올 때 모듈에 전달 되는 데이터를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-262">Specifies data that is passed to the module when it's imported.</span></span>

```yaml
Type: System.Object
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-263">-ProcessorArchitecture</span><span class="sxs-lookup"><span data-stu-id="8764a-263">-ProcessorArchitecture</span></span>

<span data-ttu-id="8764a-264">모듈에 필요한 프로세서 아키텍처를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-264">Specifies the processor architecture that the module requires.</span></span> <span data-ttu-id="8764a-265">유효한 값은 x86, AMD64, IA64, MSIL 및 None (알 수 없음 또는 지정 되지 않음)입니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-265">Valid values are x86, AMD64, IA64, MSIL, and None (unknown or unspecified).</span></span>

```yaml
Type: System.Reflection.ProcessorArchitecture
Parameter Sets: (All)
Aliases:
Accepted values: None, MSIL, X86, IA64, Amd64, Arm

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-266">-ProjectUri</span><span class="sxs-lookup"><span data-stu-id="8764a-266">-ProjectUri</span></span>

<span data-ttu-id="8764a-267">이 프로젝트에 대 한 웹 페이지의 URL을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-267">Specifies the URL of a web page about this project.</span></span>

```yaml
Type: System.Uri
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-268">-ReleaseNotes</span><span class="sxs-lookup"><span data-stu-id="8764a-268">-ReleaseNotes</span></span>

<span data-ttu-id="8764a-269">릴리스 정보를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-269">Specifies release notes.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-270">-RequiredAssemblies</span><span class="sxs-lookup"><span data-stu-id="8764a-270">-RequiredAssemblies</span></span>

<span data-ttu-id="8764a-271">`.dll`모듈에 필요한 어셈블리 () 파일을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-271">Specifies the assembly (`.dll`) files that the module requires.</span></span> <span data-ttu-id="8764a-272">어셈블리 파일 이름을 입력합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-272">Enter the assembly file names.</span></span>
<span data-ttu-id="8764a-273">PowerShell은 형식 또는 형식을 업데이트 하거나, 중첩 모듈을 가져오거나, **RootModule** 키 값에 지정 된 모듈 파일을 가져오기 전에 지정 된 어셈블리를 로드 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-273">PowerShell loads the specified assemblies before updating types or formats, importing nested modules, or importing the module file that is specified in the value of the **RootModule** key.</span></span>

<span data-ttu-id="8764a-274">이 매개 변수를 사용하면 어셈블리가 **NestedModules** 키에 이진 모듈로 나열되는 경우에도 **FormatsToProcess** 또는 **TypesToProcess** 키에 나열된 형식 지정 파일이나 유형 파일을 업데이트하기 위해 로드해야 하는 어셈블리를 포함하여 모듈에 필요한 모든 어셈블리를 나열할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-274">Use this parameter to list all the assemblies that the module requires, including assemblies that must be loaded to update any formatting or type files that are listed in the **FormatsToProcess** or **TypesToProcess** keys, even if those assemblies are also listed as binary modules in the **NestedModules** key.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-275">-RequiredModules</span><span class="sxs-lookup"><span data-stu-id="8764a-275">-RequiredModules</span></span>

<span data-ttu-id="8764a-276">전역 세션 상태여야 하는 모듈을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-276">Specifies modules that must be in the global session state.</span></span> <span data-ttu-id="8764a-277">필수 모듈이 전역 세션 상태가 아닌 경우 PowerShell에서 해당 모듈을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-277">If the required modules aren't in the global session state, PowerShell imports them.</span></span> <span data-ttu-id="8764a-278">필수 모듈을 사용할 수 없는 경우 `Import-Module` 명령이 실패 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-278">If the required modules aren't available, the `Import-Module` command fails.</span></span>

<span data-ttu-id="8764a-279">각 모듈 이름을 문자열이나 **ModuleName** 및 **ModuleVersion** 키가 포함된 해시 테이블로 입력합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-279">Enter each module name as a string or as a hash table with **ModuleName** and **ModuleVersion** keys.</span></span> <span data-ttu-id="8764a-280">해시 테이블에 선택적 **GUID** 키가 포함될 수도 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-280">The hash table can also have an optional **GUID** key.</span></span> <span data-ttu-id="8764a-281">매개 변수 값에서 문자열과 해시 테이블을 결합할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-281">You can combine strings and hash tables in the parameter value.</span></span>

<span data-ttu-id="8764a-282">PowerShell 2.0에서는 `Import-Module` 필요한 모듈을 자동으로 가져오지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-282">In PowerShell 2.0, `Import-Module` doesn't import required modules automatically.</span></span> <span data-ttu-id="8764a-283">필수 모듈이 전역 세션 상태에 있는지만 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-283">It just verifies that the required modules are in the global session state.</span></span>

```yaml
Type: System.Object[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-284">-ScriptsToProcess</span><span class="sxs-lookup"><span data-stu-id="8764a-284">-ScriptsToProcess</span></span>

<span data-ttu-id="8764a-285">`.ps1`모듈을 가져올 때 호출자의 세션 상태에서 실행 되는 스크립트 () 파일을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-285">Specifies script (`.ps1`) files that run in the caller's session state when the module is imported.</span></span>
<span data-ttu-id="8764a-286">로그인 스크립트를 사용하는 것처럼 이러한 스크립트를 사용하여 환경을 준비할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-286">You can use these scripts to prepare an environment, just as you might use a login script.</span></span>

<span data-ttu-id="8764a-287">모듈의 세션 상태에서 실행되는 스크립트를 지정하려면 **NestedModules** 키를 사용합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-287">To specify scripts that run in the module's session state, use the **NestedModules** key.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-288">-태그</span><span class="sxs-lookup"><span data-stu-id="8764a-288">-Tags</span></span>

<span data-ttu-id="8764a-289">태그의 배열을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-289">Specifies an array of tags.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-290">-TypesToProcess</span><span class="sxs-lookup"><span data-stu-id="8764a-290">-TypesToProcess</span></span>

<span data-ttu-id="8764a-291">`.ps1xml`모듈을 가져올 때 실행 되는 형식 파일 ()을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-291">Specifies the type files (`.ps1xml`) that run when the module is imported.</span></span>

<span data-ttu-id="8764a-292">모듈을 가져올 때 PowerShell에서 지정 된 파일을 사용 하 여 cmdlet을 실행 합니다 `Update-TypeData` .</span><span class="sxs-lookup"><span data-stu-id="8764a-292">When you import the module, PowerShell runs the `Update-TypeData` cmdlet with the specified files.</span></span>
<span data-ttu-id="8764a-293">형식 파일은 범위가 지정 되지 않기 때문에 세션의 모든 세션 상태에 영향을 줍니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-293">Because type files aren't scoped, they affect all session states in the session.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-294">-VariablesToExport</span><span class="sxs-lookup"><span data-stu-id="8764a-294">-VariablesToExport</span></span>

<span data-ttu-id="8764a-295">모듈이 내보내는 변수를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-295">Specifies the variables that the module exports.</span></span> <span data-ttu-id="8764a-296">와일드카드가 지원됩니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-296">Wildcards are permitted.</span></span>

<span data-ttu-id="8764a-297">이 매개 변수를 사용하여 모듈이 내보내는 변수를 제한할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-297">You can use this parameter to restrict the variables that are exported by the module.</span></span> <span data-ttu-id="8764a-298">내보낸 변수 목록에서 변수를 제거할 수 있지만 목록에 변수를 추가할 수는 없습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-298">It can remove variables from the list of exported variables, but it can't add variables to the list.</span></span>

<span data-ttu-id="8764a-299">이 매개 변수를 생략 하면는 `New-ModuleManifest` (all) 값을 사용 하 여 **VariablesToExport** 키를 만듭니다 `*` . 즉, 모듈에 정의 된 모든 변수를 매니페스트에서 내보냅니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-299">If you omit this parameter, `New-ModuleManifest` creates a **VariablesToExport** key with a value of `*` (all), meaning that all variables defined in the module are exported by the manifest.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: * (all)
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="8764a-300">-DefaultCommandPrefix</span><span class="sxs-lookup"><span data-stu-id="8764a-300">-DefaultCommandPrefix</span></span>

<span data-ttu-id="8764a-301">세션으로 가져올 때 모듈에 있는 모든 명령의 명사 앞에 추가할 접두사를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-301">Specifies a prefix that is prepended to the nouns of all commands in the module when they're imported into a session.</span></span> <span data-ttu-id="8764a-302">접두사 문자열을 입력합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-302">Enter a prefix string.</span></span> <span data-ttu-id="8764a-303">접두사는 사용자 세션에서 명령 이름 충돌을 방지합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-303">Prefixes prevent command name conflicts in a user's session.</span></span>

<span data-ttu-id="8764a-304">모듈 사용자는 cmdlet의 **prefix** 매개 변수를 지정 하 여이 접두사를 재정의할 수 있습니다 `Import-Module` .</span><span class="sxs-lookup"><span data-stu-id="8764a-304">Module users can override this prefix by specifying the **Prefix** parameter of the `Import-Module` cmdlet.</span></span>

<span data-ttu-id="8764a-305">이 매개 변수는 PowerShell 3.0에서 도입 되었습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-305">This parameter was introduced in PowerShell 3.0.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-306">-RootModule</span><span class="sxs-lookup"><span data-stu-id="8764a-306">-RootModule</span></span>

<span data-ttu-id="8764a-307">모듈의 기본 또는 루트 파일을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-307">Specifies the primary or root file of the module.</span></span> <span data-ttu-id="8764a-308">스크립트 ( `.ps1` ), 스크립트 모듈 ( `.psm1` ), 모듈 매니페스트 ( `.psd1` ), 어셈블리 ( `.dll` ), cmdlet 정의 XML 파일 ( `.cdxml` ) 또는 워크플로 ( `.xaml` )의 파일 이름을 입력 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-308">Enter the file name of a script (`.ps1`), a script module (`.psm1`), a module manifest(`.psd1`), an assembly (`.dll`), a cmdlet definition XML file (`.cdxml`), or a workflow (`.xaml`).</span></span> <span data-ttu-id="8764a-309">모듈을 가져오는 경우 루트 모듈 파일에서 내보낸 멤버를 호출자의 세션 상태로 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-309">When the module is imported, the members that are exported from the root module file are imported into the caller's session state.</span></span>

<span data-ttu-id="8764a-310">모듈에 매니페스트 파일이 있고 루트 파일이 **RootModule** 키에 지정 되지 않은 경우 매니페스트는 모듈의 주 파일이 되 고 모듈은 매니페스트 모듈이 됩니다 (ModuleType = manifest).</span><span class="sxs-lookup"><span data-stu-id="8764a-310">If a module has a manifest file and no root file was designated in the **RootModule** key, the manifest becomes the primary file for the module, and the module becomes a manifest module (ModuleType = Manifest).</span></span>

<span data-ttu-id="8764a-311">`.psm1`매니페스트가 포함 된 모듈의 또는 파일에서 멤버를 내보내려면 `.dll` 해당 파일의 이름을 매니페스트의 **RootModule** 또는 **NestedModules** 키 값에 지정 해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-311">To export members from `.psm1` or `.dll` files in a module that has a manifest, the names of those files must be specified in the values of the **RootModule** or **NestedModules** keys in the manifest.</span></span> <span data-ttu-id="8764a-312">그렇지 않으면 해당 멤버를 내보내지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-312">Otherwise, their members aren't exported.</span></span>

> [!NOTE]
> <span data-ttu-id="8764a-313">PowerShell 2.0에서는이 키를 **ModuleToProcess** 라고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-313">In PowerShell 2.0, this key was called **ModuleToProcess**.</span></span> <span data-ttu-id="8764a-314">**RootModule** 매개 변수 이름 또는 해당 **ModuleToProcess** 별칭을 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-314">You can use the **RootModule** parameter name or its **ModuleToProcess** alias.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: ModuleToProcess

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-315">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="8764a-315">-WhatIf</span></span>

<span data-ttu-id="8764a-316">가 실행 될 경우 발생 하는 상황을 보여 줍니다 `New-ModuleManifest` .</span><span class="sxs-lookup"><span data-stu-id="8764a-316">Shows what would happen if `New-ModuleManifest` runs.</span></span> <span data-ttu-id="8764a-317">Cmdlet이 실행 되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-317">The cmdlet isn't run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="8764a-318">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="8764a-318">CommonParameters</span></span>

<span data-ttu-id="8764a-319">이 cmdlet 일반 매개 변수를 지원합니다. -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction 및 -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="8764a-319">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="8764a-320">자세한 내용은 [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216)를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="8764a-320">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="8764a-321">입력</span><span class="sxs-lookup"><span data-stu-id="8764a-321">INPUTS</span></span>

### <span data-ttu-id="8764a-322">None</span><span class="sxs-lookup"><span data-stu-id="8764a-322">None</span></span>

<span data-ttu-id="8764a-323">이 cmdlet에는 입력을 파이프 할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-323">You can't pipe input to this cmdlet.</span></span>

## <span data-ttu-id="8764a-324">출력</span><span class="sxs-lookup"><span data-stu-id="8764a-324">OUTPUTS</span></span>

### <span data-ttu-id="8764a-325">없음 또는 System.String</span><span class="sxs-lookup"><span data-stu-id="8764a-325">None or System.String</span></span>

<span data-ttu-id="8764a-326">기본적으로는 `New-ModuleManifest` 출력을 생성 하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-326">By default, `New-ModuleManifest` doesn't generate any output.</span></span> <span data-ttu-id="8764a-327">그러나 **PassThru** 매개 변수를 사용 하는 경우에는 모듈 매니페스트를 나타내는 **system.string** 개체를 생성 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-327">However, if you use the **PassThru** parameter, it generates a **System.String** object representing the module manifest.</span></span>

## <span data-ttu-id="8764a-328">참고</span><span class="sxs-lookup"><span data-stu-id="8764a-328">NOTES</span></span>

<span data-ttu-id="8764a-329">`New-ModuleManifest``.psd1` **UTF16** 으로 인코딩된 모듈 매니페스트 () 파일을 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-329">`New-ModuleManifest` creates module manifest (`.psd1`) files encoded as **UTF16**.</span></span>

<span data-ttu-id="8764a-330">모듈 매니페스트는 대개 선택 사항입니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-330">Module manifests are usually optional.</span></span> <span data-ttu-id="8764a-331">그러나 모듈 매니페스트는 전역 어셈블리 캐시에 설치되는 어셈블리를 내보내는 데 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-331">However, a module manifest is required to export an assembly that is installed in the global assembly cache.</span></span>

<span data-ttu-id="8764a-332">디렉터리에서 파일을 추가 하거나 변경 하려면 `$pshome\Modules` **관리자 권한으로 실행** 옵션을 사용 하 여 PowerShell을 시작 합니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-332">To add or change files in the `$pshome\Modules` directory, start PowerShell with the **Run as administrator** option.</span></span>

<span data-ttu-id="8764a-333">PowerShell 2.0에서는 모듈 매니페스트에 필요 하지 않더라도의 많은 매개 변수가 `New-ModuleManifest` 필수입니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-333">In PowerShell 2.0, many parameters of `New-ModuleManifest` were mandatory, even though they weren't required in a module manifest.</span></span> <span data-ttu-id="8764a-334">PowerShell 3.0부터 **Path** 매개 변수만 필수입니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-334">Beginning in PowerShell 3.0, only the **Path** parameter is mandatory.</span></span>

<span data-ttu-id="8764a-335">세션은 PowerShell 실행 환경의 인스턴스입니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-335">A session is an instance of the PowerShell execution environment.</span></span> <span data-ttu-id="8764a-336">세션에 하나 이상의 세션 상태가 있을 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-336">A session can have one or more session states.</span></span> <span data-ttu-id="8764a-337">기본적으로 세션에는 하나의 전역 세션 상태만 있지만 가져온 각 모듈에 해당 세션 상태가 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-337">By default, a session has only a global session state, but each imported module has its own session state.</span></span> <span data-ttu-id="8764a-338">세션 상태를 사용하면 모듈의 명령이 전역 세션 상태에 영향을 주지 않고 실행될 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-338">Session states allow the commands in a module to run without affecting the global session state.</span></span>

<span data-ttu-id="8764a-339">호출자의 세션 상태는 모듈을 가져오는 세션 상태입니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-339">The caller's session state is the session state into which a module is imported.</span></span> <span data-ttu-id="8764a-340">일반적으로 전역 세션 상태를 참조 하지만 모듈이 중첩 모듈을 가져오는 경우 호출자는 모듈이 고 호출자의 세션 상태는 모듈의 세션 상태입니다.</span><span class="sxs-lookup"><span data-stu-id="8764a-340">Typically, it refers to the global session state, but when a module imports nested modules, the caller is the module and the caller's session state is the module's session state.</span></span>

## <span data-ttu-id="8764a-341">관련 링크</span><span class="sxs-lookup"><span data-stu-id="8764a-341">RELATED LINKS</span></span>

[<span data-ttu-id="8764a-342">Export-ModuleMember</span><span class="sxs-lookup"><span data-stu-id="8764a-342">Export-ModuleMember</span></span>](Export-ModuleMember.md)

[<span data-ttu-id="8764a-343">Get-Module</span><span class="sxs-lookup"><span data-stu-id="8764a-343">Get-Module</span></span>](Get-Module.md)

[<span data-ttu-id="8764a-344">모듈 가져오기</span><span class="sxs-lookup"><span data-stu-id="8764a-344">Import-Module</span></span>](Import-Module.md)

[<span data-ttu-id="8764a-345">New-Module</span><span class="sxs-lookup"><span data-stu-id="8764a-345">New-Module</span></span>](New-Module.md)

[<span data-ttu-id="8764a-346">Remove-Module</span><span class="sxs-lookup"><span data-stu-id="8764a-346">Remove-Module</span></span>](Remove-Module.md)

[<span data-ttu-id="8764a-347">Test-ModuleManifest</span><span class="sxs-lookup"><span data-stu-id="8764a-347">Test-ModuleManifest</span></span>](Test-ModuleManifest.md)

[<span data-ttu-id="8764a-348">about_Modules</span><span class="sxs-lookup"><span data-stu-id="8764a-348">about_Modules</span></span>](./About/about_Modules.md)
